; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/versatile/extr_pl050.c_kmi_check.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/versatile/extr_pl050.c_kmi_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.kmi_softc* }
%struct.kmi_softc = type { i32 }

@KMIIR = common dso_local global i32 0, align 4
@KMIIR_RXINTR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*)* @kmi_check to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @kmi_check(%struct.TYPE_4__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca %struct.kmi_softc*, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  %8 = load %struct.kmi_softc*, %struct.kmi_softc** %7, align 8
  store %struct.kmi_softc* %8, %struct.kmi_softc** %4, align 8
  %9 = call i32 (...) @KMI_CTX_LOCK_ASSERT()
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %11 = call i32 @KBD_IS_ACTIVE(%struct.TYPE_4__* %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %21

14:                                               ; preds = %1
  %15 = load %struct.kmi_softc*, %struct.kmi_softc** %4, align 8
  %16 = load i32, i32* @KMIIR, align 4
  %17 = call i32 @pl050_kmi_read_4(%struct.kmi_softc* %15, i32 %16)
  store i32 %17, i32* %5, align 4
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* @KMIIR_RXINTR, align 4
  %20 = and i32 %18, %19
  store i32 %20, i32* %2, align 4
  br label %21

21:                                               ; preds = %14, %13
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local i32 @KMI_CTX_LOCK_ASSERT(...) #1

declare dso_local i32 @KBD_IS_ACTIVE(%struct.TYPE_4__*) #1

declare dso_local i32 @pl050_kmi_read_4(%struct.kmi_softc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
